--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -2,12 +2,12 @@ server {
     listen 80;
     server_name localhost;
     root /var/www/backend/public;
-    index index.php index.html;
+    index index.html index.php;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
 
-    # Servir frontend (Vue build)
+    # Servir frontend (Vue build) - tentar arquivos estáticos primeiro
     location / {
         try_files $uri $uri/ /index.html;
     }
@@ -19,7 +19,8 @@ server {
 
     # Storage (imagens do catálogo)
     location /storage {
-        try_files $uri $uri/ /index.php?$query_string;
+        alias /var/www/backend/storage/app/public;
+        try_files $uri $uri/ =404;
     }
 
     # PHP-FPM
